--- a/EtabsGempetryExport/Views/MainWindow.xaml
+++ b/EtabsGempetryExport/Views/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="EtabsGempetryExport.Views.MainWindow"
+﻿<Window x:Class="EtabsGeometryExport.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EtabsGempetryExport.Views"
-        xmlns:vm="clr-namespace:EtabsGempetryExport.ViewModel"
+        xmlns:local="clr-namespace:EtabsGeometryExport.Views"
+        xmlns:vm="clr-namespace:EtabsGeometryExport.ViewModel"
         mc:Ignorable="d"
         Title="ETABS Geometry Export" Height="500" Width="700">
 
